Alignment fixes

--- a/application/views/global.css
+++ b/application/views/global.css
@@ -2817,9 +2817,15 @@ font-weight: bold !important;
     color: #000000 !important;
     background-color: #FFFFFF !important;
 }
+.custom_ui_13884_13886 .btn-6255 i {
+    color: #000000 !important;
+}
 .custom_ui_13884_13885 .btn-6255 {
     color: #FFFFFF !important;
     background-color: #000000 !important;
+}
+.custom_ui_13884_13885 .btn-6255 i {
+    color: #FFFFFF !important;
 }
 
 .nav-pills .nav-link.active {
